feat: og images, avatar support, draft cleanup

--- a/site.config.json
+++ b/site.config.json
@@ -3,6 +3,7 @@
     "domain": "",
     "email": "",
     "description": "",
+    "avatar": null,
     "footer": {
         "twitter": "HloHarshit",
         "github": null,
